// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`link > Link with GET parameters 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "content": "",
        "href": "http://example.com?key1=value1&key2=value2",
        "pathType": "absolute",
        "raw": "[http://example.com?key1=value1&key2=value2]",
        "type": "link",
      },
    ],
    "type": "line",
  },
]
`;

exports[`link > Link with content 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "content": "Example",
        "href": "https://example.com/",
        "pathType": "absolute",
        "raw": "[https://example.com/   Example]",
        "type": "link",
      },
    ],
    "type": "line",
  },
  {
    "indent": 0,
    "nodes": [
      {
        "content": "Example",
        "href": "https://example.com/",
        "pathType": "absolute",
        "raw": "[Example   https://example.com/]",
        "type": "link",
      },
    ],
    "type": "line",
  },
  {
    "indent": 0,
    "nodes": [
      {
        "content": "center https://right.com/",
        "href": "https://left.com/",
        "pathType": "absolute",
        "raw": "[https://left.com/ center https://right.com/]",
        "type": "link",
      },
    ],
    "type": "line",
  },
]
`;

exports[`link > Link with link 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "content": "https://example.com",
        "href": "https://example.com",
        "pathType": "absolute",
        "raw": "[https://example.com https://example.com]",
        "type": "link",
      },
    ],
    "type": "line",
  },
]
`;

exports[`link > Root and relative link path can include space 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "content": "",
        "href": "page name",
        "pathType": "relative",
        "raw": "[page name]",
        "type": "link",
      },
    ],
    "type": "line",
  },
  {
    "indent": 0,
    "nodes": [
      {
        "content": "",
        "href": "/project/page name",
        "pathType": "root",
        "raw": "[/project/page name]",
        "type": "link",
      },
    ],
    "type": "line",
  },
]
`;

exports[`link > Simple absolute link 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "content": "",
        "href": "https://example.com/",
        "pathType": "absolute",
        "raw": "https://example.com/",
        "type": "link",
      },
    ],
    "type": "line",
  },
]
`;

exports[`link > Simple absolute link with ahead non-space character 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "raw": "a",
        "text": "a",
        "type": "plain",
      },
      {
        "content": "",
        "href": "https://example.com/",
        "pathType": "absolute",
        "raw": "https://example.com/",
        "type": "link",
      },
    ],
    "type": "line",
  },
]
`;

exports[`link > Simple absolute link with bracket 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "content": "",
        "href": "https://example.com/",
        "pathType": "absolute",
        "raw": "[https://example.com/]",
        "type": "link",
      },
    ],
    "type": "line",
  },
]
`;

exports[`link > Simple relative link 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "content": "",
        "href": "page",
        "pathType": "relative",
        "raw": "[page]",
        "type": "link",
      },
    ],
    "type": "line",
  },
]
`;

exports[`link > Simple root link 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "content": "",
        "href": "/project/page",
        "pathType": "root",
        "raw": "[/project/page]",
        "type": "link",
      },
    ],
    "type": "line",
  },
]
`;
